dev/parser/antlr/FlexTagParser.py
# Generated from FlexTag.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class FlexTagParser(Parser):

    grammarFileName = "FlexTag.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = []

    symbolicNames = [
        "<INVALID>",
        "JSON_OPEN_TAG",
        "JSON_SELF_CLOSE_TAG",
        "OPEN_TAG",
        "SIMPLE_TAG",
        "CLOSE_TAG",
        "SELF_CLOSE_TAG",
        "DATA_SELF_CLOSE_TAG",
        "DATA_TAG_ONLY_TAG",
        "DATA_PATH_ONLY_TAG",
        "DATA_SIMPLE_SELF_CLOSE_TAG",
        "COMMENT",
        "MULTILINE_COMMENT",
        "TEXT",
        "NL",
        "WS",
    ]

    RULE_document = 0
    RULE_tagElements = 1
    RULE_tagElement = 2
    RULE_fullTag = 3
    RULE_jsonTag = 4
    RULE_selfClosingTag = 5
    RULE_content = 6
    RULE_contentLine = 7

    ruleNames = [
        "document",
        "tagElements",
        "tagElement",
        "fullTag",
        "jsonTag",
        "selfClosingTag",
        "content",
        "contentLine",
    ]

    EOF = Token.EOF
    JSON_OPEN_TAG = 1
    JSON_SELF_CLOSE_TAG = 2
    OPEN_TAG = 3
    SIMPLE_TAG = 4
    CLOSE_TAG = 5
    SELF_CLOSE_TAG = 6
    DATA_SELF_CLOSE_TAG = 7
    DATA_TAG_ONLY_TAG = 8
    DATA_PATH_ONLY_TAG = 9
    DATA_SIMPLE_SELF_CLOSE_TAG = 10
    COMMENT = 11
    MULTILINE_COMMENT = 12
    TEXT = 13
    NL = 14
    WS = 15

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class DocumentContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tagElements(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(FlexTagParser.TagElementsContext)
            else:
                return self.getTypedRuleContext(FlexTagParser.TagElementsContext, i)

        def EOF(self):
            return self.getToken(FlexTagParser.EOF, 0)

        def NL(self, i: int = None):
            if i is None:
                return self.getTokens(FlexTagParser.NL)
            else:
                return self.getToken(FlexTagParser.NL, i)

        def COMMENT(self, i: int = None):
            if i is None:
                return self.getTokens(FlexTagParser.COMMENT)
            else:
                return self.getToken(FlexTagParser.COMMENT, i)

        def MULTILINE_COMMENT(self, i: int = None):
            if i is None:
                return self.getTokens(FlexTagParser.MULTILINE_COMMENT)
            else:
                return self.getToken(FlexTagParser.MULTILINE_COMMENT, i)

        def getRuleIndex(self):
            return FlexTagParser.RULE_document

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDocument"):
                listener.enterDocument(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDocument"):
                listener.exitDocument(self)

    def document(self):

        localctx = FlexTagParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 22528) != 0:
                self.state = 16
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 22528) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 22
            self.tagElements()
            self.state = 31
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 24
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 23
                        _la = self._input.LA(1)
                        if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 22528) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 26
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 22528) != 0)):
                            break

                    self.state = 28
                    self.tagElements()
                self.state = 33
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)

            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 22528) != 0:
                self.state = 34
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 22528) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(FlexTagParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TagElementsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tagElement(self):
            return self.getTypedRuleContext(FlexTagParser.TagElementContext, 0)

        def getRuleIndex(self):
            return FlexTagParser.RULE_tagElements

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTagElements"):
                listener.enterTagElements(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTagElements"):
                listener.exitTagElements(self)

    def tagElements(self):

        localctx = FlexTagParser.TagElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_tagElements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.tagElement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TagElementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fullTag(self):
            return self.getTypedRuleContext(FlexTagParser.FullTagContext, 0)

        def selfClosingTag(self):
            return self.getTypedRuleContext(FlexTagParser.SelfClosingTagContext, 0)

        def jsonTag(self):
            return self.getTypedRuleContext(FlexTagParser.JsonTagContext, 0)

        def getRuleIndex(self):
            return FlexTagParser.RULE_tagElement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTagElement"):
                listener.enterTagElement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTagElement"):
                listener.exitTagElement(self)

    def tagElement(self):

        localctx = FlexTagParser.TagElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tagElement)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.fullTag()
                pass
            elif token in [2, 6, 7, 8, 9, 10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.selfClosingTag()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.jsonTag()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FullTagContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def content(self):
            return self.getTypedRuleContext(FlexTagParser.ContentContext, 0)

        def CLOSE_TAG(self):
            return self.getToken(FlexTagParser.CLOSE_TAG, 0)

        def OPEN_TAG(self):
            return self.getToken(FlexTagParser.OPEN_TAG, 0)

        def SIMPLE_TAG(self):
            return self.getToken(FlexTagParser.SIMPLE_TAG, 0)

        def getRuleIndex(self):
            return FlexTagParser.RULE_fullTag

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFullTag"):
                listener.enterFullTag(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFullTag"):
                listener.exitFullTag(self)

    def fullTag(self):

        localctx = FlexTagParser.FullTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fullTag)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            _la = self._input.LA(1)
            if not (_la == 3 or _la == 4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 50
            self.content()
            self.state = 51
            self.match(FlexTagParser.CLOSE_TAG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class JsonTagContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def JSON_OPEN_TAG(self):
            return self.getToken(FlexTagParser.JSON_OPEN_TAG, 0)

        def content(self):
            return self.getTypedRuleContext(FlexTagParser.ContentContext, 0)

        def CLOSE_TAG(self):
            return self.getToken(FlexTagParser.CLOSE_TAG, 0)

        def getRuleIndex(self):
            return FlexTagParser.RULE_jsonTag

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterJsonTag"):
                listener.enterJsonTag(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitJsonTag"):
                listener.exitJsonTag(self)

    def jsonTag(self):

        localctx = FlexTagParser.JsonTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_jsonTag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(FlexTagParser.JSON_OPEN_TAG)
            self.state = 54
            self.content()
            self.state = 55
            self.match(FlexTagParser.CLOSE_TAG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelfClosingTagContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELF_CLOSE_TAG(self):
            return self.getToken(FlexTagParser.SELF_CLOSE_TAG, 0)

        def DATA_SELF_CLOSE_TAG(self):
            return self.getToken(FlexTagParser.DATA_SELF_CLOSE_TAG, 0)

        def DATA_TAG_ONLY_TAG(self):
            return self.getToken(FlexTagParser.DATA_TAG_ONLY_TAG, 0)

        def DATA_PATH_ONLY_TAG(self):
            return self.getToken(FlexTagParser.DATA_PATH_ONLY_TAG, 0)

        def DATA_SIMPLE_SELF_CLOSE_TAG(self):
            return self.getToken(FlexTagParser.DATA_SIMPLE_SELF_CLOSE_TAG, 0)

        def JSON_SELF_CLOSE_TAG(self):
            return self.getToken(FlexTagParser.JSON_SELF_CLOSE_TAG, 0)

        def getRuleIndex(self):
            return FlexTagParser.RULE_selfClosingTag

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelfClosingTag"):
                listener.enterSelfClosingTag(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelfClosingTag"):
                listener.exitSelfClosingTag(self)

    def selfClosingTag(self):

        localctx = FlexTagParser.SelfClosingTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_selfClosingTag)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 1988) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ContentContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def contentLine(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(FlexTagParser.ContentLineContext)
            else:
                return self.getTypedRuleContext(FlexTagParser.ContentLineContext, i)

        def getRuleIndex(self):
            return FlexTagParser.RULE_content

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterContent"):
                listener.enterContent(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitContent"):
                listener.exitContent(self)

    def content(self):

        localctx = FlexTagParser.ContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_content)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 59
                self.contentLine()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == 13):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ContentLineContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(FlexTagParser.TEXT, 0)

        def NL(self):
            return self.getToken(FlexTagParser.NL, 0)

        def getRuleIndex(self):
            return FlexTagParser.RULE_contentLine

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterContentLine"):
                listener.enterContentLine(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitContentLine"):
                listener.exitContentLine(self)

    def contentLine(self):

        localctx = FlexTagParser.ContentLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_contentLine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(FlexTagParser.TEXT)
            self.state = 65
            self.match(FlexTagParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
